--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -490,7 +490,12 @@ html, body {
     max-height:120px;
     margin:5px;
 }
-
+.choosenResponse{
+    border: 1px solid red;
+    border-radius: 5px;
+    padding: 3px;
+    background-color: rgba(225, 78, 82, 0.91);
+}
 
 
 
