--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -497,14 +497,14 @@ html, body {
     background-color: rgba(225, 78, 82, 0.91);
 }
 
-.create-topic__btn{
+.create-topic__btn, .create-category__btn{
     border: 1px solid black;
     border-radius: 5px;
     padding: 2px;
     text-decoration: none;
     margin:auto;
 }
-.create-topic__btn-container{
+.create-topic__btn-container, .create-category__btn-container{
     display:flex;
     margin-bottom:30px;
 }
