--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -113,6 +113,7 @@ th{
 .centered{
   width:360px;
   margin:0 auto;
+  padding-top: 30px;
 }
 
 .header-h2{
@@ -270,6 +271,28 @@ th{
 .profile-block{
   width: 360px;
   margin: 30px auto;
+}
+.list, .list ul{
+  list-style-type: none;
+}
+.category-item{
+  border: 1px solid black;
+  border-radius: 3px;
+  padding: 2px;
+  display: inline-block;
+  margin: 2px;
+  width: 150px;
+  text-align: center;
+  cursor: pointer;
+}
+._ {
+  margin-left:10px;
+}
+.__{
+  margin-left:20px;
+}
+.___{
+  margin-left:30px;
 }
 
 
