--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -66,6 +66,11 @@ html, body {
   text-decoration: none;
   color:red;
 }
+.h1{
+  text-align:center;
+  color:red;
+  margin:20px;
+}
 .table-container {
   display:flex;
   justify-content: center;
@@ -144,6 +149,9 @@ th{
 
 .hidden{
   display:none!important;
+}
+.hover{
+  cursor:pointer;
 }
 .green {
   color: #11ff30;
@@ -276,7 +284,7 @@ th{
 .list, .list ul{
   list-style-type: none;
 }
-.category-item{
+.category-item, .topic-item{
   border: 1px solid black;
   border-radius: 3px;
   padding: 2px;
