--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -136,11 +136,15 @@ th{
 .form-field__error{
   color:red;
   border-bottom:1px dotted red;
-  display:block;
+  display:inline-block;
 }
 .form-field__error:empty {
   display:none;
 }
+.form__field-block{
+  margin:20px 0;
+}
+
 .lesson-form{
   padding:20px 0;
 }
@@ -307,6 +311,74 @@ th{
   text-align:center;
   color:red;
 }
+
+.responses_list{
+  background: #d1f5f0;
+  margin: 30px 0;
+  padding: 10px;
+}
+.responses_list ul{
+  list-style-type: none;
+}
+.response_user_info{
+  width: 200px;
+ /* background-color: #ffb2c0;*/
+  display: inline-block;
+  padding: 2px;
+  border-radius: 5px;
+  border:1px solid black;
+}
+.response_user_info:hover{
+  background-color:inherit;
+}
+.response_item{
+  margin-bottom: 10px;
+  border-bottom:1px solid black;
+  cursor:pointer;
+}
+
+.response_item:hover{
+  background-color: rgba(4, 89, 40, 0.78);
+  z-index: 1000;
+}
+
+.response_user_text{
+  display:inline-block;
+  padding:2px;
+  vertical-align: top;
+}
+.response-item__avatar{
+  max-height:200px;
+  max-width:100px;
+}
+.left2{
+  margin-left:15px;
+}
+.left3{
+  margin-left:30px;
+}
+.left4{
+  margin-left:45px;
+}
+.left{
+  margin-left:60px;
+}
+.response_answer-btn{
+  float:right;
+  cursor:pointer;
+}
+.response_answer-container{
+  height:20px;
+}
+
+.choosen-item{
+  background-color: #ff3c3c!important;
+}
+.green-text{
+  color:green;
+}
+
+
 
 
 @media screen and (max-width: 750px) {
